--- a/basic.html
+++ b/basic.html
@@ -9,6 +9,8 @@
 	<p>
 <h1>  här kommer en till version </h1>	
 
-<h2> Ta mig fan en till version, ser man på </h2>		
+<h2> Ta mig fan en till version, ser man på </h2>	
+
+<p> äntligen klart </p>	
 </body>
 </html>
